# ltorres6.github.io

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  401.html  404.html  Alison's Fantabulous Site - Projects.csv  CNAME  Gemfile  README.md  _config.yml  about.html  about.md  config.yml  contact.html  cv.md  detail_category.html  detail_projects.html  detail_work.html  detail_writing.html  index.html  index.md  latex.md  links.md  main.py  package-lock.json  package.json  personal.md  projects.html  pyproject.toml  r.md  research.md  stackbit.yaml  style.scss  styleguide.html  tsconfig.json  writing.html
.github/worflows/: deploy.yml
.github/workflows/: deploy.yml
.sass-cache/75e0be87fdcb70f8fa2884a43c18d7eff12b5f2c/: _functions.scssc  _mixins.scssc  _skel.scssc  _vars.scssc
__MACOSX/: .__config.yml
_layouts/: default.html  front.html  post.html
_posts/: 2016-11-16-Hello-World.md  2016-12-16-Book-Chapter.md  2017-05-09-ATS-2017.md  2018-05-01-jaci-letter.md  2018-05-07-ATS-2018.md  2018-08-07-Kauzcor-Textbook.md  2019-03-25-Career-Update.md  2020-01-13-so-i-blog-now.md
_site/: feed.xml  index.html
components/: html_head.html  social.html
css/: alisons-fantabulous-site-47eafb.webflow.css  alisons-superb-site.webflow.css
cv/: HQuick_cv.aux  HQuick_cv.dvi  HQuick_cv.out  HQuick_cv.tex  mummy_cv.aux  mummy_cv.dvi  mummy_cv.out  mummy_cv.tex  mummy_cv_web.aux  mummy_cv_web.dvi  mummy_cv_web.out  mummy_cv_web.tex
data/: social.json
js/: webflow.js
public/: 404.html  CNAME
src/: App.tsx  main.tsx
tags/: first.html
templates/: post.html
(+64 files in other folders)
